--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="src" path="Lib">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:/Users/cp511/git/ADSBPacketDelivery/Lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="jpcap-0.01.16-win32/jars/dev-classes_net.ultrametrics-0.03.jar"/>
+	<classpathentry kind="lib" path="jpcap-0.01.16-win32/jars/fooware_CommandLine-1.0.jar"/>
+	<classpathentry kind="lib" path="jpcap-0.01.16-win32/jars/javadoc_net.sourceforge.jpcap-0.01.16.jar"/>
+	<classpathentry kind="lib" path="jpcap-0.01.16-win32/jars/net.sourceforge.jpcap-0.01.16.jar"/>
+	<classpathentry kind="lib" path="jnetpcap-1.4.r1425/jnetpcap.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
