--- a/.classpath
+++ b/.classpath
@@ -12,6 +12,18 @@
 	<classpathentry kind="lib" path="jpcap-0.01.16-win32/jars/javadoc_net.sourceforge.jpcap-0.01.16.jar"/>
 	<classpathentry kind="lib" path="jpcap-0.01.16-win32/jars/net.sourceforge.jpcap-0.01.16.jar"/>
 	<classpathentry kind="lib" path="jnetpcap-1.4.r1425/jnetpcap.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre-10.0.2"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="Lib/lib/javafx-swt.jar"/>
+	<classpathentry kind="lib" path="Lib/lib/javafx.base.jar"/>
+	<classpathentry kind="lib" path="Lib/lib/javafx.controls.jar"/>
+	<classpathentry kind="lib" path="Lib/lib/javafx.fxml.jar"/>
+	<classpathentry kind="lib" path="Lib/lib/javafx.graphics.jar"/>
+	<classpathentry kind="lib" path="Lib/lib/javafx.media.jar"/>
+	<classpathentry kind="lib" path="Lib/lib/javafx.swing.jar"/>
+	<classpathentry kind="lib" path="Lib/lib/javafx.web.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
