--- a/.classpath
+++ b/.classpath
@@ -7,23 +7,13 @@
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:/Users/hp/git/ADSBPacketDelivery/Lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="jpcap-0.01.16-win32/jars/dev-classes_net.ultrametrics-0.03.jar"/>
-	<classpathentry kind="lib" path="jpcap-0.01.16-win32/jars/fooware_CommandLine-1.0.jar"/>
-	<classpathentry kind="lib" path="jpcap-0.01.16-win32/jars/javadoc_net.sourceforge.jpcap-0.01.16.jar"/>
-	<classpathentry kind="lib" path="jpcap-0.01.16-win32/jars/net.sourceforge.jpcap-0.01.16.jar"/>
-	<classpathentry kind="lib" path="jnetpcap-1.4.r1425/jnetpcap.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="Lib/lib/javafx-swt.jar"/>
-	<classpathentry kind="lib" path="Lib/lib/javafx.base.jar"/>
-	<classpathentry kind="lib" path="Lib/lib/javafx.controls.jar"/>
-	<classpathentry kind="lib" path="Lib/lib/javafx.fxml.jar"/>
-	<classpathentry kind="lib" path="Lib/lib/javafx.graphics.jar"/>
-	<classpathentry kind="lib" path="Lib/lib/javafx.media.jar"/>
-	<classpathentry kind="lib" path="Lib/lib/javafx.swing.jar"/>
-	<classpathentry kind="lib" path="Lib/lib/javafx.web.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX11"/>
+	<classpathentry exported="true" kind="lib" path="jnetpcap-1.4.r1425/jnetpcap.jar"/>
+	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
