--- a/.classpath
+++ b/.classpath
@@ -16,5 +16,10 @@
 	<classpathentry exported="true" kind="lib" path="jnetpcap-1.4.r1425/jnetpcap.jar"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/jdk-9.0.4"/>
+	<classpathentry kind="lib" path="Lib/jaxb/jaxb-api.jar"/>
+	<classpathentry kind="lib" path="Lib/jaxb/jaxb-core.jar"/>
+	<classpathentry kind="lib" path="Lib/jaxb/jaxb-impl.jar"/>
+	<classpathentry kind="lib" path="Lib/jaxb/jaxb-jxc.jar"/>
+	<classpathentry kind="lib" path="Lib/jaxb/jaxb-xjc.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
